logo fix on safari

--- a/source/components/home/navigation/styles.scss
+++ b/source/components/home/navigation/styles.scss
@@ -28,7 +28,7 @@
     }
 
     &__logo {
-        min-width: 50px;
+        width: 50px;
     }
 
 }
